# ccagents

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  analyze_log.sh  bug.yaml  check_git.py  codecov.yml  config.yaml  debug-pattern-matching.sh  git_helper.sh  list-issue.sh  test-config.yaml  test-pattern-match.rs  test-regex-pattern.rs  test_config.yaml  test_pty_direct.rs
.claude/: settings.json
.claude/commands/: resume.md  solve.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
assets/web/: index.html
assets/web/scripts/: terminal-client.js
assets/web/styles/: main.css
docs/: architecture.md  mock-test-guide.md  terminal_output_monitoring.md  tutorial.md
examples/: README.md  basic-rules.yaml  mock-rules-legacy.yaml  mock-rules.yaml  simple-rules.yaml  terminal_backend_demo.rs  terminal_monitor_example.rs  test-mock.sh
examples/agent_pool/: README.md  config.yaml  simple_task.sh
examples/basic/: README.md  config.yaml
examples/claude/: README.md  config-fixed.yaml  config.yaml  mock.sh
examples/concurrency/: README.md  concurrency_demo.yaml  critical_task.sh  heavy_task.sh  light_task.sh
examples/dedupe_queue/: README.md  config.yaml  dedupe_example.yaml  generate_items.sh  process_item.sh
examples/diff-timeout-demo/: README.md  config.yaml
examples/simple_queue/: README.md  config.yaml  list_tasks.sh  process_task.sh
examples/web-ui/: README.md  config.yaml
src/: ht_client.rs  ht_process.rs  lib.rs  main.rs  session_manager.rs  terminal_backend.rs  terminal_output_monitor.rs
src/agent/: agent.rs  agent_pool.rs  agents.rs  execution.rs  ht_process.rs  mod.rs  mod.rs.bak  monitor.rs  monitoring.rs  native_ht_process.rs  native_ht_session.rs  native_terminal.rs  pty_process.rs  pty_processor.rs  pty_session.rs  pty_terminal.rs  terminal.rs  terminal_monitor.rs  timeout.rs
src/cli/: args.rs  helpers.rs  mod.rs
src/config/: agents.rs  agents_config.rs  app_config.rs  decision.rs  entry.rs  helper.rs  loader.rs  mod.rs  placeholder.rs  rule.rs  rules_config.rs  terminal.rs  trigger.rs  triggers_config.rs  types.rs  web_ui.rs  web_ui_config.rs
src/manager/: mod.rs
src/monitor/: agent.rs  agent_system.rs  agents.rs  mod.rs  periodic.rs  startup.rs  timeout.rs  trigger_system.rs  web_server_manager.rs
src/queue/: executor.rs  manager.rs  mod.rs  storage.rs
src/rule/: capture.rs  diff_monitor.rs  diff_timeout.rs  engine.rs  mod.rs  timeout.rs  when.rs
src/rule_engine/: compiled_rule.rs  decision.rs  hot_reload.rs  mod.rs  rule_file.rs
src/ruler/: config.rs  decision.rs  entry.rs  mod.rs  rule.rs  rule_loader.rs  rule_types.rs  session.rs  types.rs
src/ruler/rule_engine/: compiled_rule.rs  decision.rs  hot_reload.rs  mod.rs  rule_file.rs
src/terminal/: mod.rs  pty_process.rs  pty_process_trait.rs  pty_session.rs  pty_terminal.rs
src/terminal_backend/: config.rs  direct_backend.rs  factory.rs  ht_backend.rs
src/trigger/: execution.rs  mod.rs  periodic.rs  startup.rs  triggers.rs
src/web/: assets.rs  mod.rs  server.rs  tests.rs  websocket.rs
src/web_server/: mod.rs  server.rs  tests.rs  websocket.rs
src/web_ui/: assets.rs  index.html
src/workflow/: error_handling.rs  execution.rs  hot_reload.rs  mod.rs  session.rs
tests/: integration_tests.rs
