[package]
name = "rule-agents"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "YAML-driven agent auto-control system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sonesuke/rule-agents"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "fs", "time", "sync", "process", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }

# File watching
notify = "6.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Process management for HT integration
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
