[package]
name = "ccauto"
version = "0.1.0"
edition = "2021"
authors = ["sonesuke <iamsonesuke@gmail.com>"]
description = "YAML-driven agent auto-control system (command-line tool)"
license = "MIT"
repository = "https://github.com/sonesuke/ccauto"

[[bin]]
name = "ccauto"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "fs", "time", "sync", "process", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }

# File watching
notify = "6.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Process management for HT integration
serde_json = "1.0"
async-trait = "0.1"

# Directory utilities
dirs = "5.0"

# Binary location
which = "6.0"

# Hash for output deduplication
md5 = "0.7"

# Terminal emulation dependencies
portable-pty = "0.8"
vt100 = "0.15"
bytes = "1.7"
libc = "0.2"
nix = { version = "0.27", features = ["signal", "process"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Web UI dependencies
axum = { version = "0.7", features = ["ws", "json", "tower-log"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
