[package]
name = "ccauto"
version = "0.1.0"
edition = "2024"
authors = ["sonesuke <iamsonesuke@gmail.com>"]
description = "YAML-driven agent auto-control system (command-line tool)"
license = "MIT"
repository = "https://github.com/sonesuke/ccauto"

[[bin]]
name = "ccauto"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "signal", "fs", "time", "sync", "process", "io-util"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
regex = "1.10"
anyhow = "1.0.98"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Process management for HT integration
serde_json = "1.0"

# Terminal emulation dependencies
portable-pty = "0.9"
vt100 = "0.15.2"
bytes = "1.10"
nix = { version = "0.30", features = ["signal", "process"] }

# Web UI dependencies
axum = { version = "0.8", features = ["ws", "json", "tower-log"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
tempfile = "3.14"
